Changes to Login and Signup, removed unnecessary stylizations to fix alignments and clean up UI

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,6 +61,7 @@
 {
     background: url("../images/background.jpeg") no-repeat center center fixed;
     height: 100%;
+    width: 100%;
     background-size: cover;
     padding-bottom: 60%;
     opacity: 0.9 !important;
